reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_vec_generic_generic-2.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_typescript_code :: < TestStructWithVecGenericGeneric::<u8>\n> ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:

export function client(base: string | Client): __definition.Interface {
  return __implementation.__client(base);
}

export namespace __definition {
  export interface Interface {
    input_test: (
      input: reflectapi_demo.tests.generics.TestStructWithVecGenericGeneric<number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) => AsyncResult<{}, {}>;
  }
}
export namespace reflectapi {
  /**
   * Struct object with no fields
   */
  export interface Empty {}

  /**
   * Error object which is expected to be never returned
   */
  export interface Infallible {}
}

export namespace reflectapi_demo {
  export namespace tests {
    export namespace generics {
      export interface TestStructWithSimpleGeneric<A> {
        _f: A;
      }

      export interface TestStructWithVecGenericGeneric<T> {
        _f: Array<
          reflectapi_demo.tests.generics.TestStructWithSimpleGeneric<T>
        >;
      }
    }
  }
}

namespace __implementation {

  function input_test(client: Client) {
    return (
      input: reflectapi_demo.tests.generics.TestStructWithVecGenericGeneric<number /* u8 */>,
      headers: {},
      options?: RequestOptions,
    ) =>
      __request<
        reflectapi_demo.tests.generics.TestStructWithVecGenericGeneric<number /* u8 */>,
        {},
        {},
        {}
      >(client, "/input_test", input, headers, options);
  }
}
