reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__generics__struct_with_vec_generic_generic-4.snap
---
source: reflectapi-demo/src/tests/generics.rs
expression: "super :: into_input_python_code :: < TestStructWithVecGenericGeneric::<u8> >\n()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Type variables for generic types


A = TypeVar("A")

T = TypeVar("T")


class ReflectapiDemoTestsGenericsTestStructWithSimpleGeneric(BaseModel, Generic[A]):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    f: A = Field(serialization_alias="_f", validation_alias="_f")


class ReflectapiDemoTestsGenericsTestStructWithVecGenericGeneric(BaseModel, Generic[T]):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    f: list[reflectapi_demo.tests.generics.TestStructWithSimpleGeneric[T]] = Field(
        serialization_alias="_f", validation_alias="_f"
    )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class generics:
            """Namespace for generics types."""

            TestStructWithSimpleGeneric = (
                ReflectapiDemoTestsGenericsTestStructWithSimpleGeneric
            )
            TestStructWithVecGenericGeneric = (
                ReflectapiDemoTestsGenericsTestStructWithVecGenericGeneric
            )


class AsyncInputClient:
    """Async client for input_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.generics.TestStructWithVecGenericGeneric[int]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = AsyncInputClient(self)


class InputClient:
    """Synchronous client for input_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.generics.TestStructWithVecGenericGeneric[int]
        ] = None,
    ) -> ApiResponse[Any]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[Any]: Response containing Any data
        """
        path = "/input_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=None,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.input_ = InputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsGenericsTestStructWithSimpleGeneric,
    ReflectapiDemoTestsGenericsTestStructWithVecGenericGeneric,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
